Fix word break on mobile

--- a/src/styles/components/container.css
+++ b/src/styles/components/container.css
@@ -2,6 +2,7 @@
   margin-right: auto;
   margin-left: auto;
   padding: 0 10px;
+  word-wrap: break-word;
 
   @media (--md-viewport-min) {
     width: 768px;
